Fixed the footer on smaller displays

--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -674,10 +674,11 @@ li{
 }
 
 .childrenGrass{
-  height:130px;
   width:100%;
   z-index:1;
   position: relative;
+  background-position-y:0;
+  height:98px
 }
 /*Global tweeks*/
 #pageHeader{
